--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "http-server": "^0.11.1",
+    "path": "^0.12.7",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
